--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
 
 <body>
     <header>Weather Dashboard</header>
-    </div>
     <div class="flex-row align-start align-stretch-md align-content-start align-content-stretch-md min-100-vh ">
         <div class="col-12 col-md-3 p-3">
           <h1>Search for a City:</h1>
           <form id="search-form" class="mb-2">
             <input id="search-input" class="form-input w-100" type="text" placeholder="Search!">
-            <button class="btn btn-info btn-block">Search</button>
+            <button class="btn btn-info btn-block btn-dark d-grid gap-2 col-12 mx-auto">Search</button>
           </form>
         </div>
     
@@ -25,4 +24,7 @@
           <h2>Showing results for <span id="result-text"></span></h2>
           <div id="result-content"></div>
         </div>
+        <script src="./assets/script.js"></script>
 </body>
+
+</html>
