--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
         </div>
         
         <div class ="col-md-8 p-3">
-          <h2>Showing Results For <span id="result-text"></span></h2>
-          <div id="result-content"></div>
+          <h2>Showing Results For <span id="result-text"></span><span id="result-date"></span></h2>
+          <div id="result-content"  class="border border-2 border-dark p-3"></div>
+          <div id="forecast-content" class="row">
+          </div>
         </div>
     </div>
 
